--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -176,10 +176,10 @@ springdoc.packages-to-scan=com.algaworks.algafood.api
 springdoc.oAuthFlow.authorizationUrl=http://127.0.0.1:8080/oauth2/authorize
 springdoc.oAuthFlow.tokenUrl=http://127.0.0.1:8080/oauth2/token
 
-springdoc.swagger-ui.oauth.client.id=algafood-web-authorization-code-token-jwt
-springdoc.swagger-ui.oauth.client.secret=web123
-springdoc.swagger-ui.oauth.use.pkce-with-authorization-code-grant=true
-springdoc.swagger-ui.oauth.use.basic-authentication-with-access-code-grant=true
+springdoc.swagger-ui.oauth.client-id=algafood-web-authorization-code-token-jwt
+springdoc.swagger-ui.oauth.client0secret=web123
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+springdoc.swagger-ui.oauth.use-basic-authentication-with-access-code-grant=true
 
 
 
