Resolvendo a configuracao do repositorio Redis para armazenamento de sessao HTTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,13 +56,21 @@ algafood.auth.provider-url=http://127.0.0.1:8080
 # ================ CONFIGURACAO DO SPRING SESSION =================
 # ==================================================================
 
-# Desativa o uso de uma implementação de armazenamento de sessees no Spring Session, assim nao sera necessario configurar o Spring Session para rodar a aplicacao localmente
-spring.session.store-type=none
 
-# Configurado no docker-compose
-#spring.redis.host=192.168.0.54
-#spring.redis.port=6379
-#spring.redis.password=redis12345
+# Nao foi configurado no docker-compose
+
+# Especifica o mecanismo de armazenamento para sessoes HTTP, comentado para nao ser usado nenhum armazenando de sessoes
+#application.session.store=redis
+
+# Valores permitidos configurados no RedisSessionConfig.class da aplicacao
+spring.session.redis.repository-type=default
+
+#Namespace para chaves usadas para armazenar sessões.
+spring.session.redis.namespace=redis:sessions
+
+spring.data.redis.host=192.168.0.54
+spring.data.redis.port=6379
+spring.data.redis.password=redis12345
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
