Atualizando projeto para versão do Spring 3.4.6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,7 +86,7 @@ spring.datasource.password=L@ur&nco@Mysql135
 # spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 # ================================================
 # ============== GERACAO DE SCRIPTS ==============
