--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -20,7 +20,7 @@ appender.console.name=Console
 appender.console.target=SYSTEM_OUT
 appender.console.follow=true
 appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%style{%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}{America/Sao_Paulo}}{gray} %highlight{${LOG_LEVEL_PATTERN:-%5p}}{FATAL=red blink, ERROR=red, WARN=yellow bold, INFO=green, DEBUG=green bold, TRACE=blue} %style{%pid}{magenta} %style{[%15.15t]}{cyan} %style{%-40.40C{1.}}{blue} : %m%n%throwable{10}
+appender.console.layout.pattern=%style{%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}{America/Sao_Paulo}}{cyan} %highlight{${LOG_LEVEL_PATTERN:-%5p}}{FATAL=red blink, ERROR=red, WARN=yellow bold, INFO=green, DEBUG=green bold, TRACE=blue} %style{%pid}{magenta} %style{[%15.15t]}{cyan} %style{%-40.40C{1.}}{blue} : %m%n%throwable{10}
 appender.console.layout.disableAnsi=false
 appender.console.bufferedIo=false
 
