--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.4.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.algaworks</groupId>
@@ -21,10 +21,9 @@
         <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
         <spring.modelmapper.version>3.0.0</spring.modelmapper.version>
         <spring.jasperreports.version>6.21.3</spring.jasperreports.version>
-        <spring.authorizationserver.version>1.0.0</spring.authorizationserver.version>
         <spring.json.version>20240303</spring.json.version>
         <spring.nimbusds.version>6.21.2</spring.nimbusds.version>
-        <springdoc.version>2.0.0</springdoc.version>
+        <springdoc.version>2.8.6</springdoc.version>
     </properties>
 
     <!-- Repository do jasper report: https://jaspersoft.jfrog.io/jaspersoft/jaspersoft-repo, adicionado para evitar erro de build:
@@ -70,8 +69,8 @@
 
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
 
@@ -139,9 +138,6 @@
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
 
-
-
-
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-common</artifactId>
@@ -175,7 +171,6 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-authorization-server</artifactId>
-            <version>${spring.authorizationserver.version}</version>
         </dependency>
 
         <dependency>
