--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -119,7 +119,15 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=10
 
 # O tempo maximo que as conexoes a mais que foram abertas, podem estar conectadas com o banco de dados
-#spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.idle-timeout=10000
+
+#logging.level.com.zaxxer.hikari=DEBUG
+#spring.datasource.hikari.maximum-pool-size=50
+#spring.datasource.hikari.minimum-idle=20
+#spring.datasource.hikari.idle-timeout=60000
+#spring.datasource.hikari.max-lifetime=1200000
+#spring.datasource.hikari.connection-timeout=5000
+#spring.datasource.hikari.leak-detection-threshold=2000
 
 # ========================================================================================
 # ========= CONFIGURACOES DO JACKSON PARA TRABALHAR COM JSON =============================
